# ChangeLog for media-video/subtitlecomposer
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-video/subtitlecomposer/ChangeLog,v 1.20 2014/02/06 18:34:48 johu Exp $

  06 Feb 2014; Johannes Huber <johu@gentoo.org>
  subtitlecomposer-0.5.3-r2.ebuild:
  x86 stable, bug #495824

  05 Feb 2014; Chema Alonso <nimiux@gentoo.org>
  subtitlecomposer-0.5.3-r2.ebuild:
  Stable for amd64 wrt bug #495824

  20 Jan 2014; Michael Palimaka <kensington@gentoo.org>
  +files/subtitlecomposer-0.5.3-gold-gstreamer.patch,
  subtitlecomposer-0.5.3-r2.ebuild:
  Add patch from Debian fixing linking with gold and USE="gstreamer", wrt bug
  #498482.

*subtitlecomposer-0.5.3-r2 (25 Jun 2013)

  25 Jun 2013; Johannes Huber <johu@gentoo.org>
  +files/subtitlecomposer-0.5.3-gold-xine.patch,
  +subtitlecomposer-0.5.3-r2.ebuild:
  Revision bump adds patch by SN (Enlik) <slawomir.nizio@sabayon.org> which
  fixes build with gold linker and use xine wrt bug #418037.

  06 Apr 2013; Michael Palimaka <kensington@gentoo.org>
  -subtitlecomposer-0.5.3.ebuild:
  Remove old.

  05 Apr 2013; Agostino Sarubbo <ago@gentoo.org>
  subtitlecomposer-0.5.3-r1.ebuild:
  Stable for x86, wrt bug #464294

  03 Apr 2013; Sergey Popov <pinkbyte@gentoo.org>
  subtitlecomposer-0.5.3-r1.ebuild:
  Stable on amd64, wrt bug #464294

  04 Mar 2013; Michael Palimaka <kensington@gentoo.org> metadata.xml:
  Add KDE herd.

  11 Sep 2012; Johannes Huber <johu@gentoo.org>
  subtitlecomposer-0.5.3-r1.ebuild, subtitlecomposer-0.5.3.ebuild:
  Add slot dependency on media-libs/gstreamer.

*subtitlecomposer-0.5.3-r1 (25 Aug 2012)

  25 Aug 2012; Chris Reffett <creffett@gentoo.org>
  +subtitlecomposer-0.5.3-r1.ebuild:
  Bump to EAPI 4.

  01 Jul 2011; Tomáš Chvátal <scarabeus@gentoo.org>
  files/subtitlecomposer-linkage-patch.patch:
  Use absolute paths in patch so we won't get QA warning.

  02 Feb 2011; Theo Chatzimichos <tampakrap@gentoo.org>