@@ -6,24 +6,23 @@ AUX subtitlecomposer-0.5.3-gold-gstreamer.patch 681 SHA256 2496b8bfb1ff57b3539ee
 AUX subtitlecomposer-0.5.3-gold-xine.patch 179 SHA256 9848a5fd9657415b42c13ea62068e7940d3b1bdfe2f4c26db3ec93692adf0f83 SHA512 263dd1a64a930332c036c68ea9ac78c864e2621554c2d10ecb0aa58ae880f7d2d94152df268a5655c3b642bdccb01dd5a2c224e1c56ef4d4a302204f8dd51068 WHIRLPOOL dc1b7913e4762d3fbba3ed002cc0b6d4942307c654299b81c1a995d0ddd6ca58159ab86d64279ab9a16046ab614b3b605f6d120243b6e808770282cd6613ea13
 AUX subtitlecomposer-linkage-patch.patch 313 SHA256 fe5913867ee3b94ead1b3754fd94f1de73ee221392971e5956623fc9f9e7749c SHA512 9fd5039b83142a1cf0671e58ad14150dec1ebb62eaef003d77290c68e871523d0d6773dc5311958f342af9f5d0192be79c377cf0a6c7ec4d2333a578176cff2e WHIRLPOOL 1b2f49fac33f100f823ce15dba3290646466aa4083bcc9735710a61a66bbb8790423b00ee639b392e811fdfaa4ea6454f678188bcb4eb4dd1d7420c2702b4841
 DIST subtitlecomposer-0.5.3.tar.bz2 344295 SHA256 87f3831b5ae09f4ffcefe586cd3b04b197784bf09652b02518b24a12fde2cad0 SHA512 5e336ae1f6cbe84b00ee1495cd1897afc6c9dc6b2bca604a33510a022004e57c49304c0feaeff92c3569cd2681c48e305ab48c82f32eece4825b4d555c2bb52c WHIRLPOOL 486288ff0a6679740a78feaca0d991dfc08ef2f01aed200015cb13f1b602cfb5e41cbb4601be0ce2aa103c899290364cd4c50f583b006c415cd26890564da3b2
-EBUILD subtitlecomposer-0.5.3-r1.ebuild 1293 SHA256 27072c996cfc123464ed94516b8b1fedd6843c22e9c713cb7a1d7c9938cf12e1 SHA512 9b9352098a34576f58bdb034aac567385cfba8131677b28f4062f2b6f859b8004491f4570f3e17966810df6e84a37f4101dcc71e383e9cfe51755e4246c044f0 WHIRLPOOL 7be65e1d35f8cfc394e6576b8e05855dc04ddb77a42b3f84eecc6089855b37bb3833fcf29075c5dec8e714cdd2d4ede1cbe08d9ad1cfce81e5242bac6566b553
 EBUILD subtitlecomposer-0.5.3-r2.ebuild 1357 SHA256 cc668c3d244a4eda859998cf9a9d7f3037bf6ddfa9a206e49574b0ad0fb043c9 SHA512 9cc67600269bb810802ccbf0592ee2053a35d110d8acd35b33b537017d8ee3d64c7a383f1f3db6f563c5b2545d7e40f77810139048641094d0dc334175aa96e9 WHIRLPOOL 8fec087302a20bb7455032f60f0f6fe3b66b00ca2901c76c117d86b1f8f820124a2a7fec5c80dc3945215459132a5b1f46f37f17f09c4ad777f58c59e65c70b0
-MISC ChangeLog 3334 SHA256 3348fdea11d525fe512929180f0b4125d8f07f4cd610e956f52c05984d314e39 SHA512 9352c983dbbd0e0333a80730ed323dc66d034bc4d877d1ce9068cbcf29b437b6928eae14b40d41aa57496e393b63e81a57c7dcd64046783ddb1226bab9e55db8 WHIRLPOOL 5f321c2691d4a6e7cef7405cbe33d4bc7382173384a074aa6dc1de9c370271926025de555ff7dabe559d3bfd1a3cdc893e6c6008301ff673f2cd9eaf6df82b59
+MISC ChangeLog 3434 SHA256 18b082547f152970f64830ff136aa25551952e247220003136e22c13c63c101f SHA512 0dcf725c888feb981af460533ed64385562c8f32fd6ef3f53b8601077f2cb2ceaaa3463b5c815718a37bd05eabd68aed8a27d9a850677530bd0ba7fe30880258 WHIRLPOOL 062b3c8622498f6e378b3d376f8ab4224c86311de78a58fc95f03da08eedd480aabada21251e019dd98c365883d1ace83309a5dbf811d0afc667ef8302e23415
 MISC metadata.xml 177 SHA256 3ed4c7c61b6305801e132f35a16465474f5853cf4a8da7ee856fbb0aeb861e1a SHA512 270b501ec3bcd1aca5d7c877119a11f784e24836f49c5a08bac5da6c76dbcd6a1e5aa1e1293f650ffb3952ca241ff702bc2cc3d697c872992cf39cb432e3a463 WHIRLPOOL 460f9cb179d4da01b0baae4fbce90abca432db195684d3267d6978b62d614f584722f326afd1642112b3f49a50a1ae3d2126c7659290b0526e1fba36fef7af13
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iQIcBAEBCAAGBQJS89XPAAoJEGVpnaTzz9K9IakQAJYoykcwD1H+3p5z3pVYGW5B
-1h6YLUvXCWRkkfhgaWL+lXvVK3NGa8LAudK5I4qx68uBymBvBphOGeWm1m3b2iAA
-ZbRm+2C1rBPW1OFZEZk7feSbXztwcbkQte7tVef4K2sljrGm6oWdcedVWRB5nefM
-L6+X9YAReKXkdShznS7xFBJzjgx/mDZgF4PUEnP6c3WZxqHFkh4WxNjrRwrkvRoO
-BMRP7nHEIX4/32dMxf7lUx0ygQc8vOFPk367xBf9j+Gvq/stxA+aItl2MQDkBN3U
-RXIuOy5jPEUeJ+Q08VjGUXRGW7Vp30LIjITeef11ZE4PWKugh1TEqLSDxPq5WPkM
-ZF/PjDY27NmNr/UboI6MGqgHDfdbrmEjJSQej/nc/zk/w9Y1T6nyAKNHQ6N6F/wZ
-VInUq483yJXHCZykLlwk5zPT6SUuZ/ogd3VAtx6HrNYOJRqq/xfBD/B8xaM7Xi0x
-hb6zQWn/0Ly8H13FmHsalpKgNmu5frraPhOpzlVK9OQ0BRzS/pxwipw0p7E4pydX
-l6NuOpp9rciB5niFS+QhCj1Y2C2ztUpG32O1gk1XR2/+Bmxi+lyVJUZ5Ox/FaMWo
-k1D/jE0UjJF5Nf6TnMhBYWZbY8i+PGljW/6msk8SrZVFBDgiKuCGPccCXFiO/55K
-q0y2Mn42Pqv5fA2rATjC
-=fYB/
+iQIcBAEBCAAGBQJS89YuAAoJEGVpnaTzz9K9M5wP/0eN72abuml2zXlr++q4x8Ge
+v2pk3TGRJebkr6vi9i8VypjiYu31OFJeR3s5fvw48WCMSlZeBI21oJX4l3iqMPif
+g6GYm4wdl2Te46yYOHrBl2OlJxhpvtbx1K32yGhzPdSPJCSRiGBHZE58bGxRxZ/d
+uBUOIGAcBs/kUxRV/B1b8VRcTj2RzBW42K4+A8rxk060RLamFovSbV6dn/j/Z6fm
+O+4yAXzA8LToLRvauutO2qiwwsZqTQV9HgDBhZMEmtGOqfDOf93+gpkUfO7ZasT8
+Wq+DbNKdoH6tDDyMQWDBB0MZzvWowJpltJQ/6V5BN+A79I+g91oGrrtFHDUWqYKh
+CjNwSganBaNNIADXjq5DkY90d0dK5EW32gaY8CJEp9YTFXyrGwSUoaAFCZlcab0P
+pGrjprz5t5IXA+sFaJ/YbGyyK3h6HHP5GWonHXE1LCqTYqDcYDlzvvwPCC+gp1T7
+0O5aR4Raw53l3pvG9YGyFbEqfgA98an6iosoaoXT3hpMNI0wZ/QP0FTgdZlLdN/i
+DMX1uW89ZtE6jhpNFfDiZHOc7vkoP78l33upM37ZY/0Gk2sGAso7nI4raWW6Yv5u
+DQiw8KcSVUG46+ApEVI1WdeWZfIf9ybPccRDvP4DZohvnFqQfNIpQd0PPujVj3fJ
+0NsfgBOp6pbjMmgCLSH2
+=/LFF
 -----END PGP SIGNATURE-----
