@@ -1,6 +1,10 @@
 # ChangeLog for media-video/subtitlecomposer
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-video/subtitlecomposer/ChangeLog,v 1.20 2014/02/06 18:34:48 johu Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-video/subtitlecomposer/ChangeLog,v 1.21 2014/02/06 18:36:28 johu Exp $
+
+  06 Feb 2014; Johannes Huber <johu@gentoo.org>
+  -subtitlecomposer-0.5.3-r1.ebuild:
+  Remove old.
 
   06 Feb 2014; Johannes Huber <johu@gentoo.org>
   subtitlecomposer-0.5.3-r2.ebuild:
